--- a/fedora/hypr/autostart.conf
+++ b/fedora/hypr/autostart.conf
@@ -1,2 +1,3 @@
 # Extra autostart processes
 # exec-once = uwsm-app -- my-service
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
