--- a/arch/hypr/hyprland.conf
+++ b/arch/hypr/hyprland.conf
@@ -1,4 +1,3 @@
- 
 ##########################################
 # $$$$$$\  $$$$$$$\  $$$$$$$\   $$$$$$\  #
 #$$  __$$\ $$  __$$\ $$  __$$\ $$  __$$\ #
@@ -79,7 +78,8 @@ $menu = rofi -show drun
  bind = $mainMod_SHIFT, W, exec , sh ~/.config/hypr/scripts/wal.sh
  bind = $mainMod_SHIFT, space, exec, sh ~/.config/waybar/scripts/launch.sh
  bind = $mainMod, L, exec, hyprlock
- bind = $mainMod_SHIFT, S, exec, hyprshot  -m region
+ bind = SUPER SHIFT, S, exec, hyprshot -m region --raw | satty --filename - --output-filename ~/Pictures/Screenshot/satty-$(date '+%Y%m%d-%H%M%S').png
+ bind = $mainMod, G, exec, sh ~/.config/waybar/scripts/waybar_switch.sh
 #####################################################################
 #           $$\       $$$$$$\   $$$$$$\  $$\   $$\                  #
 #           $$ |     $$  __$$\ $$  __$$\ $$ | $$  |                 #
@@ -141,11 +141,11 @@ $menu = rofi -show drun
         new_optimizations = true
         size = 10
         passes = 3
-        brightness = 1
-        noise = 0.05
-        contrast = 0.89
-        vibrancy = 0.5
-        vibrancy_darkness = 0.5
+        brightness = 1.08999999
+        noise = 0.02
+        contrast = 0.99
+        vibrancy = 0.9
+        vibrancy_darkness = 0.6
         popups = false
         popups_ignorealpha = 0.6
         input_methods = true
@@ -216,7 +216,7 @@ $menu = rofi -show drun
     kb_layout = us,ara
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = grp:alt_shift_toggle
     kb_rules =
     follow_mouse = 1
     sensitivity = 0.10020
@@ -247,9 +247,8 @@ $menu = rofi -show drun
 #################################
 
 
- env = XCURSOR_SIZE,21
- env = HYPRCURSOR_SIZE,21
-
+env = HYPRCURSOR_THEME,macOS
+env = HYPRCURSOR_SIZE,macOS,24
 ##################################################################
 #$$\      $$\ $$$$$$\ $$\   $$\ $$$$$$$\   $$$$$$\  $$\      $$\ #
 #$$ | $\  $$ |\_$$  _|$$$\  $$ |$$  __$$\ $$  __$$\ $$ | $\  $$ |#
@@ -296,11 +295,31 @@ $menu = rofi -show drun
   match:class = thunar
   opacity = 0.89
   }
+  windowrule {
+  name = clocks
+  match:class = org.gnome.clocks
+  opacity = 0.89
+  float = on
+  size = 700 540
+  }
+  windowrule {
+  name = web-apps
+  match:class = webapp-manager.py
+  opacity = 0.89
+  float = on
+  size = 820 600
+  }
+  windowrule {
+  name = web-browser
+  match:class = firefox
+  opacity = 0.90
+  }
   layerrule {
   name = Rofi-Wayland
   match:namespace = rofi
   blur = on
   blur_popups = on
+  ignore_alpha = 0.1
   }
   layerrule {
   name = Waybar-Rule
@@ -314,6 +333,7 @@ $menu = rofi -show drun
   blur = on
   
   }
+   
 
 #########################################################################
 #$$\      $$\  $$$$$$\  $$\   $$\ $$$$$$\ $$$$$$$$\  $$$$$$\  $$$$$$$\  #
@@ -339,5 +359,7 @@ monitor=,preferred@60,0x0,1
 #$$ |  $$ |\$$$$$$  |   $$ |    $$$$$$  |#
 #\__|  \__| \______/    \__|    \______/ #
 ##########################################
-
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
 exec-once = waybar & swww-daemon & swaync &
+exec-once = swayosd-server &
+exec-once = hyprctl setcursor macOS 24
