CarmonyOS 11.2 Is Here !

--- a/arch/hypr/hyprland.conf
+++ b/arch/hypr/hyprland.conf
@@ -246,9 +246,9 @@ $menu = rofi -show drun
 #\________|\__|  \__|    \_/    #
 #################################
 
+ env = XCURSOR_SIZE,21
+ env = HYPRCURSOR_SIZE,21
 
-env = HYPRCURSOR_THEME,macOS
-env = HYPRCURSOR_SIZE,macOS,24
 ##################################################################
 #$$\      $$\ $$$$$$\ $$\   $$\ $$$$$$$\   $$$$$$\  $$\      $$\ #
 #$$ | $\  $$ |\_$$  _|$$$\  $$ |$$  __$$\ $$  __$$\ $$ | $\  $$ |#
