CarmonyOS 11.2 is Here !

--- a/arch/hypr/hyprland.conf
+++ b/arch/hypr/hyprland.conf
@@ -346,7 +346,7 @@ $menu = rofi -show drun
 #\__|     \__| \______/ \__|  \__|\______|   \__|    \______/ \__|  \__|#
 #########################################################################
 
-monitor=,preferred@60,0x0,1
+monitor=,preferred,auto,1
 
 
 ##########################################
